crates/norito_derive/tests/ui/fail/attrs_conflict_named.stderr
error: conflicting attributes: #[norito(skip)] and #[norito(default)]
 --> tests/ui/fail/attrs_conflict_named.rs:5:5
  |
5 | /     #[norito(skip)]
6 | |     #[norito(default)]
7 | |     a: u32,
  | |__________^
